--- a/build.gradle
+++ b/build.gradle
@@ -5,30 +5,25 @@ buildscript {
 		maven { url "https://repo.sleeping.town" } //Commented out to use the version of voldeloom in the settings.gradle includeBuild (hopefully??)
 	}
 	dependencies {
-		classpath "agency.highlysuspect:voldeloom:2.4"
+		classpath "agency.highlysuspect:voldeloom:2.2-SNAPSHOT"
 	}
 }
 
 apply plugin: "agency.highlysuspect.voldeloom"
 
-java {
-	toolchain {
-		//Last version able to set a --release as low as 6.
-		languageVersion = JavaLanguageVersion.of(11)
-	}
-}
+java.toolchain.languageVersion = JavaLanguageVersion.of(11) //Last version able to set a --release as low as 6
+compileJava.options.release.set(6) //Forge doesn't understand classes compiled to versions of the class-file format newer than Java 6's
 
-compileJava {
-	//Forge doesn't understand classes compiled to versions of the class-file format newer than Java 6's.
-	options.release.set(6)
-}
-
-def forgeVersion = project.minecraft_forge
-def minecraftVersion = project.minecraft
+String minecraftVersion = "1.4.7"
+String forgeVersion = "1.4.7-6.6.2.534"
 archivesBaseName = project.modid
 version = project.mod_version
 
 volde {
+	forgeCapabilities {
+		srgsAsFallback = true
+	}
+	
 	runs {
 		client {
 			programArg "quaternary"
@@ -39,14 +34,22 @@ volde {
 dependencies {
 	minecraft "com.mojang:minecraft:${minecraftVersion}"
 	forge "net.minecraftforge:forge:${forgeVersion}:universal@zip"
-	mappings "net.minecraftforge:forge:${forgeVersion}:src@zip"
-	modImplementation files("libs/industrialcraft-2_1.117.385-lf.jar")
-	modImplementation files("libs/BlockHelper-1.5.2-1.2.0-pre3-dev.jar")
-	modImplementation files("libs/mod_AdvancedSolarPanels_3_3_7-deobf.jar")
-	modImplementation files("libs/compactsolars-universal-1.5.2-4.2.0.52.zip")
-	modImplementation files("libs/chargepads-1.5.2-universal-2.7.1.89-deobf.jar")
-	modImplementation files("libs/AdvancedPowerManagement-1.2.68-IC2-1.115.jar")
-	modImplementation files("libs/advancedmachines-1.5.2-4.9.4-forge.jar")
+	
+	mappings volde.layered {
+		baseZip "net.minecraftforge:forge:${forgeVersion}:src@zip"
+		unmapClass(["bar", "bas"])
+	}
+	
+	//accessTransformers files("./src/main/resources/good_cool_ats.cfg")
+	
+	//coremodImplementation files("libs/name.jar")
+	//coremodImplementation files("libs/name.zip")
+	//modImplementation files("libs/name.jar")
+	//modImplementation files("libs/name.zip")
+
+	modImplementation files("libs/blockhelper-1.4.7-1.0.0-voldeloom-dev.jar")
+	modImplementation files("libs/advancedmachines-1.4.7-1.0.0-voldeloom.jar")
+	modImplementation files("libs/industrialcraft-2_1.115.207-lf.jar")
 }
 
 sourceSets {
