--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ repositories {
 	maven {
 		url("https://mvnrepository.com/artifact/it.unimi.dsi/fastutil")
 	}
+	maven { url = "https://api.modrinth.com/maven" }
 }
 
 dependencies {
@@ -47,13 +48,13 @@ dependencies {
 	forge "net.minecraftforge:forge:${forgeVersion}:universal@zip"
 	mappings "net.minecraftforge:forge:${forgeVersion}:src@zip"
 	modImplementation files("libs/industrialcraft-2_1.117.385-lf.jar")
-	modImplementation files("libs/BlockHelper-1.5.2-1.2.0-pre3-dev.jar")
 	modImplementation files("libs/mod_AdvancedSolarPanels_3_3_7-deobf.jar")
 	modImplementation files("libs/compactsolars-universal-1.5.2-4.2.0.52.zip")
-	modImplementation files("libs/chargepads-1.5.2-universal-2.7.1.89-deobf.jar")
 	modImplementation files("libs/AdvancedPowerManagement-1.2.68-IC2-1.115.jar")
-	modImplementation files("libs/advancedmachines-1.5.2-4.9.4-forge.jar")
 	modImplementation files("libs/gregtechmod311.zip")
+	modImplementation files("libs/BlockHelper-1.5.2-1.2.0-pre3-dev.jar")
+	modImplementation files("libs/VintageCore-1.5.2-1.0.2-dev.jar")
+	modImplementation files("libs/AdvancedMachines-1.5.2-4.7.5.2d-dev.jar")
 
 	implementation group: 'it.unimi.dsi', name: 'fastutil', version: '8.2.1'
 }
