feat: update to latest version of BlockHelper - added new ToolRenderer - updated to match Waila/Jade addon for IC2Classic from 1.7.10, 1.12.2 and 1.19.2

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,15 @@
+pluginManagement {
+    repositories {
+        maven {
+            url = uri("https://repo.sleeping.town")
+        }
+        mavenCentral()
+        gradlePluginPortal {
+            content {
+                excludeGroup("org.apache.logging.log4j")
+            }
+        }
+    }
+}
+
 rootProject.name = "Block Helper Addons - 1.5.2"
