--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,7 @@ dependencies {
 	mappings "net.minecraftforge:forge:${forgeVersion}:src@zip"
 
 	modImplementation files("libs/industrialcraft-2_1.117.385-lf.jar")
-	modImplementation files("libs/mod_AdvancedSolarPanels_3_3_7-deobf.jar")
+//	modImplementation files("libs/mod_AdvancedSolarPanels_3_3_7-deobf.jar")
 	modImplementation files("libs/compactsolars-universal-1.5.2-4.2.0.52.jar")
 	modImplementation files("libs/AdvancedPowerManagement-1.2.68-IC2-1.115.jar")
 	modImplementation files("libs/gregtechmod311.jar")
