--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,13 @@ dependencies {
 	modImplementation files("libs/BlockHelper-1.5.x-2.0.0-pre1-dev.jar")
 }
 
+processResources {
+	inputs.property 'version', version
+	filesMatching('mcmod.info') {
+		expand version: version
+	}
+}
+
 sourceSets {
 	main {
 		resources {
