fixed: register plugin using provided instructions

--- a/build.gradle
+++ b/build.gradle
@@ -56,8 +56,17 @@ dependencies {
 	modImplementation files("libs/AdvancedMachines-1.4.7-4.7.5.2d-dev.jar")
 	modImplementation files("libs/compactsolars.zip")
 	modImplementation files("libs/apm.jar")
+	modImplementation files("libs/BlockHelper-1.4.7-2.0.0-pre2.jar")
 
-	modImplementation("curse.maven:block-helper-251766:6612898")
+	//accessTransformers files("./src/main/resources/good_cool_ats.cfg")
+
+}
+
+processResources {
+	inputs.property 'version', version
+	filesMatching('mcmod.info') {
+		expand version: version
+	}
 }
 
 sourceSets {
