added: Tool integration for Nano/Quantum Helmets Now we can integrate all the required tools inside our Nano or Quantum helmets, which allows us to free up some space inside our hotbar

--- a/build.gradle
+++ b/build.gradle
@@ -52,7 +52,7 @@ dependencies {
 	modImplementation files("libs/compactsolars-universal-1.5.2-4.2.0.52.jar")
 	modImplementation files("libs/AdvancedPowerManagement-1.2.68-IC2-1.115.jar")
 	modImplementation files("libs/gregtechmod311.jar")
-	modImplementation files("libs/VintageCore-1.5.2-1.0.7-dev.jar")
+	modImplementation files("libs/VintageCore-1.5.2-1.0.8-dev.jar")
 	modImplementation files("libs/AdvancedMachines-1.5.2-4.7.5.2g-pre-dev.jar")
 	modImplementation files("libs/AdvancedSolarPanels-1.5.2-4.0.0-dev.jar")
 	modImplementation files("libs/BlockHelper-1.5.x-2.0.0-pre4-dev.jar")
@@ -70,5 +70,11 @@ sourceSets {
 		resources {
 			srcDirs 'src/main/java'
 		}
+	}
+}
+
+jar {
+	from('compat') {
+		include 'reforged/mods/blockhelper/addons/integrations/nei/**'
 	}
 }
