--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ compileJava.options.release.set(6) //Forge doesn't understand classes compiled t
 String minecraftVersion = "1.4.7"
 String forgeVersion = "1.4.7-6.6.2.534"
 archivesBaseName = project.modid
-version = project.mod_version
+version = project.modVersion
 
 volde {
 	forgeCapabilities {
@@ -50,29 +50,37 @@ dependencies {
 		unmapClass(["bar", "bas"])
 	}
 
+	// main
+	modImplementation files("libs/VintageCore-1.4.7-2.0.0-dev.jar")
+
+	// ic2
 	modImplementation files("libs/industrialcraft-2_1.115.207-lf.jar")
+	// gregtech
 	modImplementation files("libs/gregtechmod290h.zip")
-	modImplementation files("libs/VintageCore-1.4.7-1.0.5-dev.jar")
+	// addons
 	modImplementation files("libs/AdvancedMachines-1.4.7-4.7.5.2d-dev.jar")
 	modImplementation files("libs/compactsolars.zip")
 	modImplementation files("libs/apm.jar")
 	modImplementation files("libs/BlockHelper-1.4.7-2.0.0-pre4.jar")
 
+	modImplementation('maven.modrinth:nei:vqhwlzMQ')
+	modImplementation('maven.modrinth:codechicken-core:tHDtt4Mh')
+
 	//accessTransformers files("./src/main/resources/good_cool_ats.cfg")
-
 }
 
+def props = ['modName', 'modid', 'modVersion', 'modDescription', 'modAuthors', 'modDeps', 'minecraft', 'url']
 processResources {
-	inputs.property 'version', version
-	filesMatching('mcmod.info') {
-		expand version: version
+	filesMatching("mcmod.info") {
+		expand(project.properties.subMap(props))
 	}
 }
 
-sourceSets {
-	main {
-		resources {
-			srcDirs 'src/main/java'
-		}
-	}
+task sourcesJar(type: Jar) {
+	archiveClassifier.set("sources")
+	from sourceSets.main.allSource
+}
+
+artifacts {
+	archives sourcesJar
 }
