--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,12 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
-mod_version = 1.4.7-2.0.0-beta4
 modid = BlockHelperAddons
+modName = IC2: BlockHelper Addons
+modDescription = BlockHelper Additional Support for IC2 related mods
+modVersion = 1.4.7-2.0.0-beta6
+modAuthors = CrossVas
+modDeps = required-after:VintageCore;required-after:mod_BlockHelper;required-after:IC2;after:AdvancedPowerManagement;after:ChargePads;after:GregTech_Addon
+url = https://github.com/VintageModsReforged/BlockHelperAddons
+
 minecraft = 1.4.7
 minecraft_forge = 1.4.7-6.6.2.534
